# smtplib

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.zh-CN.md
cmake/: smtplib-config.cmake.in
examples/: CMakeLists.txt  async_send_email_with_awaitable.cpp  sync_send_email.cpp
include/smtplib/: smtplib.h
